--- a/.github/workflows/update-progress.yml
+++ b/.github/workflows/update-progress.yml
@@ -1,31 +1,39 @@
-name: Auto Update Progress
+name: Update Progress
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:  # manual trigger
+  workflow_dispatch:
+
+permissions:
+  contents: write  # ✅ this line gives the action permission to push commits
 
 jobs:
-  update-progress:
+  update:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt || true
 
       - name: Run update script
         run: python scripts/update_progress.py
 
       - name: Commit and push changes
-        uses: EndBug/add-and-commit@v9
-        with:
-          author_name: "GitHub Actions"
-          author_email: "actions@github.com"
-          message: "chore: auto-update README progress"
-          add: "README.md"
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Auto-update progress" || echo "No changes to commit"
+          git push origin main
